--- a/main.css
+++ b/main.css
@@ -2,12 +2,15 @@
 /* CSS Document */
 
 
-body{
+html,body{
     margin: 0;
     padding: 0;
     height: auto;
     width:100%;
-    background-color: #FFF;
+	min-height:600px;
+	min-width:1000px;
+    background-color: #4DA5FF;
+	scroll:auto;
 }
 
 #header {
@@ -17,11 +20,46 @@ body{
 }
 
 #calculator{
-	margin-left: 30%;
-    margin-top: 50px;
+	position:absolute;
+	top:0;
+	bottom:0;
+	margin-left: 20%;
+	width:1000px;
+	min-height:1000px;
     font-size: 30px;
+	background-color: #FFF;
 	}
 
+#Reset{
+	margin-left:20px;
+	font-family:'Chunk';
+	font-size:17.5px;
+}	
+
+#codefield{
+	margin-left:10%;
+}
+
+#Head{
+	top:5%;
+	font-family:'Garamond';
+	margin-left:20px;
+}
+
+h5{
+	font-family:'Garamond';
+	margin-left:20px;
+}
+
+#Choice{
+	margin-left:20px;
+}
+
+.Buttons{
+	font-family:'Chunk';
+	font-size:17.5px;
+
+}
 /* chart css: don't modify -int-argc */
 
 
@@ -34,3 +72,4 @@ body{
 	margin: 2px;
 }
 
+@font-face { font-family: Chunk; src: url('Chunkfive.otf'); } 
